Changed to portfolio data

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,3 +1,71 @@
-<div>
-
+<div class='container' id='projectsDiv'>
+    <img class='img-responsive animated zoomInDown' src='img/projects.jpg'>
+    <div class='animated zoomInUp'>
+        <div class='UX'>
+            <h1>UX/UI Projects</h1>
+            <div class='escape'>
+                <h2>Escape UW</h2>
+                <div class='rows'>
+                    <div class='col-xs-12'>
+                    <a href='http://students.washington.edu/chris13/info360/Info_360/#/'>
+                        <img class='img-responsive' src='img/Projects/ux.jpg'>
+                    </a>
+                    </div>
+                    <p>This application is designed specifically for UW students, as with this application, UW students will be informed of relevant and feasible events occurring around the Greater Seattle area. The events listed in our application will all include UW exclusive discounts and promotions in order to encourage and facilitate students’ ability to attend events outside of the University District, thereby providing them with a break from the stresses and pressures of campus-life and allowing them to escape UW.</p>
+                </div>
+            </div>
+            <img class='img-responsive' src='img/divide.jpeg'>
+        </div>
+        <div class='Posters'>
+            <h1>Poster Projects</h1>
+            <div class='Infographic'>
+                <h2>Thylacine Infographic</h2>
+                <a href='http://chrisleatham13.wix.com/infovis-2015'> <img class='img-responsive' src='img/Projects/thylacine.jpg'></a>
+                <p>View the design process at http://chrisleatham13.wix.com/infovis-2015 for the infographic about the Thylacine</p>
+            </div>
+            <div class='Campus'>
+                <h2>Campus Maps</h2>
+                <img class='img-responsive' src="img/Projects/campus.jpg">
+                <p>Campus Maps is a concept for an application that allows UW students to view the fastest route on campus from one point to another, allowing for faster travel and efficency</p>
+            </div>
+            <img class='img-responsive' src='img/divide.jpeg'>
+        </div>
+        <div class='Web'>
+            <h1>Web Development</h1>
+            <div class='spotify'>
+                <h2>Hipsteria</h2>
+                <a href='http://students.washington.edu/chris13/info343/spotify/'> <img class='img-responsive' src='img/Projects/spotify.jpg'></a>
+                <p>Hipsteria is an application using Spotify's API that gives you an artist's least popular song to their most popular song. That way you can start listening to the songs by the one hit wonders that no one but you knows. Feel like the ultimate Hipster.</p>
+            </div>
+            <div class='police'>
+                <h2>Police Shooting</h2>
+                <a href='http://students.washington.edu/chris13/info343/police-shooting/'><img class='img-responsive' src='img/Projects/police.jpg'></a>
+                <p>Police shooting is an interactive website MapBox map tiles and a JSON object of past police shootings in the united states and allows you to filter out different types of shootings.</p>
+            </div>
+            <div class='lambda'>
+                <h2>Lambda Chi Alpha Website</h2>
+                <a href='http://www.uwlambdachialpha.com/'><img class='img-responsive' src='img/Projects/lambda.jpg'></a>
+                <p>Website made for the Lambda Chi Alpha Fraternity at the University of Washington</p>
+            </div>
+            <img class='img-responsive' src='img/divide.jpeg'>
+        </div>
+        <div class='Art'>
+            <h1>Art Projects</h1>
+            <div class='gator'>
+                <h2>Gator</h2>
+                <img class='img-responsive' src='img/Projects/gator.jpg'>
+                <p>Sample of drawing and painting work</p>
+            </div>
+            <div class='commission'>
+                <h2>Commission</h2>
+                <img class='img-responsive' src='img/Projects/comission.jpg'>
+                <p>Commission work done for a friend</p>
+            </div>
+            <div class='valentines'>
+                <h2>Valentines Day Gift</h2>
+                <img class='img-responsive' src='img/Projects/valentines.jpg'>
+                <p>Valentines Day Gift done for my girlfriend</p>
+            </div>
+        </div>
+    </div>
 </div>
