Trying to start over

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 <body>
     <img class="img-responsive animated bounceInDown" id="title" src="img/title.jpeg">
+
+    <!-- The Navbar -->
     <nav class='navbar'>
         <div class='container-fluid' id='navbarText'>
             <div class='navbar-header'> 
@@ -35,6 +37,7 @@
         </div>
     </nav>
 
+    <!-- Multipage architecture -->
     <div class='container-fluid'>
         <div ui-view></div>
     </div>
