--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,10 +7,9 @@
                 <h2>Escape UW</h2>
                 <div class='rows'>
                     <div class='col-xs-12'>
-                    <a href='http://students.washington.edu/chris13/info360/Info_360/#/'>
                         <img class='img-responsive' src='img/Projects/ux.jpg'>
-                    </a>
                     </div>
+                    <h3>IN PROGRESS</h3>
                     <p>This application is designed specifically for UW students, as with this application, UW students will be informed of relevant and feasible events occurring around the Greater Seattle area. The events listed in our application will all include UW exclusive discounts and promotions in order to encourage and facilitate students’ ability to attend events outside of the University District, thereby providing them with a break from the stresses and pressures of campus-life and allowing them to escape UW.</p>
                 </div>
             </div>
@@ -21,6 +20,7 @@
             <div class='Infographic'>
                 <h2>Thylacine Infographic</h2>
                 <a href='http://chrisleatham13.wix.com/infovis-2015'> <img class='img-responsive' src='img/Projects/thylacine.jpg'></a>
+                <h3>IN PROGRESS</h3>
                 <p>View the design process at http://chrisleatham13.wix.com/infovis-2015 for the infographic about the Thylacine</p>
             </div>
             <div class='Campus'>
