--- a/pages/education.html
+++ b/pages/education.html
@@ -16,10 +16,15 @@
         <div class='row' id='classes'>
             <div ng-repeat='course in courseInfo' class='course col-xs-6 col-sm-4 col-md-2'>
                 <div class='courses'>
-                    <h2 class='courseTitle'>{{course.Class + ' ' + course.Number}}</h2>
+                    <ul>
+                        <li>
+                            <a href="#" data-toggle="popover" title="{{course.Class + ' ' + course.Number}}" data-content="test content">{{course.Class + ' ' + course.Number}}</a>
+                        </li>
+                    </ul>
+                    <!-- <h2 class='courseTitle'>{{course.Class + ' ' + course.Number}}</h2>
                     <h3 class='courseDetails'>{{course.Title}}</h3>
                     <p class='courseGrades'>{{course.Quarter + ' ' + course.Year}}</p>
-                    <p class='courseGrades'>{{'GPA: ' + course.GPA}}</p>
+                    <p class='courseGrades'>{{'GPA: ' + course.GPA}}</p> -->
                 </div>
             </div>
             <img class='img-responsive' src='img/divide.jpeg'>
