--- a/pages/education.html
+++ b/pages/education.html
@@ -18,7 +18,7 @@
                 <div class='courses'>
                     <ul>
                         <li>
-                            <a href="#" data-toggle="popover" title="{{course.Class + ' ' + course.Number}}" data-content="test content">{{course.Class + ' ' + course.Number}}</a>
+                            <a href="/education" data-toggle="popover" title="{{course.Class + ' ' + course.Number}}" data-content="test content">{{course.Class + ' ' + course.Number}}</a>
                         </li>
                     </ul>
                     <!-- <h2 class='courseTitle'>{{course.Class + ' ' + course.Number}}</h2>
