--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="img/favicon.ico">
 
     <script src="https://code.jquery.com/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+
     <link rel="stylesheet" href="css/animate.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -15,11 +17,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 
     <script src="main.js"></script>
-    <link href="css/main.css" type="text/css" rel="stylesheet"/>    
+    <link href="css/main.css" type="text/css" rel="stylesheet"/> 
+   
 </head>
 
 <body>
-    <img class="img-responsive animated bounceInDown" id="title" src="img/title.jpeg">
+    <video width="100%" height="100%" autoplay>
+        <source src="img/webmov.mp4" type="video/mp4">
+    </video>
 
     <!-- The Navbar -->
     <nav class='navbar'>
@@ -28,7 +33,7 @@
             <ul class='nav animated rollIn'>
                 <li><a ui-sref='home'>Home</a></li>
                 <li><a ui-sref='about'>About</a></li>
-                <li><a ui-sref='education'>Education</a></li>
+               <!-- <li><a ui-sref='education'>Education</a></li> -->
                 <li><a ui-sref='CV'>CV</a></li>
                 <li><a ui-sref='projects'>Projects</a></li>
                 <li><a ui-sref='contact'>Contact</a></li>
