--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="img/Projects/react.png" alt="">
+                    <img class="img-responsive" src="img/Projects/react.gif" alt="">
                 </a>
                 <h3>
                     React Together
