--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <video width="100%" height="100%" autoplay>
+    <video width="100%" height="100%" autoplay  controls loop>
         <source src="img/webmov.mp4" type="video/mp4">
     </video>
 
