--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
 </head>
 
 <body>
-    <video width="100%" height="100%" autoplay  controls loop>
-        <source src="img/webmov.mp4" type="video/mp4">
-    </video>
-
     <!-- The Navbar -->
     <nav class='navbar'>
         <div class='container-fluid' id='navbarText'>
             <div class='navbar-header'> 
             <ul class='nav animated rollIn'>
-                <li><a ui-sref='home'>Home</a></li>
-                <li><a ui-sref='about'>About</a></li>
-               <!-- <li><a ui-sref='education'>Education</a></li> -->
-                <li><a ui-sref='CV'>CV</a></li>
-                <li><a ui-sref='projects'>Projects</a></li>
-                <li><a ui-sref='contact'>Contact</a></li>
+                <li class ="hvr-grow-shadow"><a ui-sref='home'>Home</a></li>
+                <li class ="hvr-grow-shadow"><a ui-sref='about'>About</a></li>
+                <li class ="hvr-grow-shadow"><a ui-sref='CV'>CV</a></li> 
+                <li class ="hvr-grow-shadow"><a ui-sref='projects'>Projects</a></li>
+                <li class ="hvr-grow-shadow"><a ui-sref='contact'>Contact</a></li>
             </ul>
             </div>
         </div>
     </nav>
+    <video width="100%" height="100%" autoplay  controls loop>
+        <source src="img/webmov.mp4" type="video/mp4">
+    </video>
+
+
 
     <!-- Multipage architecture -->
     <div class='container-fluid'>
