--- a/pages/projects.html
+++ b/pages/projects.html
@@ -21,12 +21,14 @@
                 <p>This application is designed specifically for UW students, as with this application, UW students will be informed of relevant and feasible events occurring around the Greater Seattle area. The events listed in our application will all include UW exclusive discounts and promotions in order to encourage and facilitate students’ ability to attend events outside of the University District, thereby providing them with a break from the stresses and pressures of campus-life and allowing them to escape UW.</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="https://projects.invisionapp.com/share/PC6ARLJRT#/screens">
                     <img class="img-responsive" src="img/Projects/react.gif" alt="">
                 </a>
+                <a href="https://projects.invisionapp.com/share/PC6ARLJRT#/screens">
                 <h3>
                     React Together
                 </h3>
+            </a>
                 <p>Currently under development. This application is a chatting service where users can react to sports online in large chatrooms based on games.</p>
             </div>
         </div>
