--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,7 +29,18 @@
                     React Together
                 </h3>
             </a>
-                <p>Currently under development. This application is a chatting service where users can react to sports online in large chatrooms based on games.</p>
+                <p>This application is a chatting service where users can react to sports online in large chatrooms based on games.</p>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="https://drive.google.com/file/d/0B10itP9QwSbTTmplcGlhczllVlU/view?usp=sharing">
+                    <img class="img-responsive" src="img/Projects/proposal.png" alt="">
+                </a>
+                <a href="https://drive.google.com/file/d/0B10itP9QwSbTTmplcGlhczllVlU/view?usp=sharing">
+                <h3>
+                    React Together Proposal
+                </h3>
+            </a>
+                <p>The Design Proposal for the React Together Application</p>
             </div>
         </div>
         <!-- /.row -->
