added resume link

--- a/pages/CV.html
+++ b/pages/CV.html
@@ -1,6 +1,8 @@
 <div>
 	<div class='container' id='workDiv'>
 		<img class='img-responsive animated zoomInDown' src='img/CV.jpg'>
+		<h3> My resume can be viewed <a href="https://drive.google.com/file/d/0B10itP9QwSbTeWRJWmVlMFBlVzQ/view?usp=sharing">HERE</a>
+		</h3>
 		<div class='animated zoomInUp'>
 			<h1>Work Experience</h1>
 			<div ng-repeat='work in workInfo' class='col-xs-12' id='work'>
