--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
 			<div class="desktop-12 columns"><div class="border-top"></div></div>
 			
 			<div class="clear"></div>
-
+<div><video width="100%" height="100%" autoplay  controls loop>
+        <source src="images/webmov.mp4" type="video/mp4">
+				</video></div>
 			<div class="desktop-3 tablet-12 columns">
 				<h2>About Me</h2>
 			</div>
