--- a/single-blog.html
+++ b/single-blog.html
@@ -128,7 +128,7 @@
 	<!-- Blog (Single)
 	================================================== -->
 	<section id="archive">
-		<a href="https://drive.google.com/open?id=0B10itP9QwSbTMTJFaG9Hd0lUODQ"><h1>Resume available HERE</h1></a>
+		<a href="https://drive.google.com/open?id=0B10itP9QwSbTMTJFaG9Hd0lUODQ"><h1 style="padding-left: 2em;">Resume available HERE</h1></a>
 						<div class="clear"></div>
 
 			<div class="container">
