--- a/chameleon.html
+++ b/chameleon.html
@@ -159,7 +159,7 @@
 						
 						<div class="box-info">
 						  <h4 class="border-top">Tools</h4>
-						  <p>Sketch <br>Photoshop <br>Illustrator <br>InDesign </p>
+						  <p>Sketch <br>Photoshop</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
