--- a/thanks.html
+++ b/thanks.html
@@ -158,7 +158,7 @@
 						
 						<div class="box-info">
 						  <h4 class="border-top">Tools</h4>
-						  <p>Adobe Illustrator <br>Adobe Photoshop</p>
+						  <p>Adobe Illustrator</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
