--- a/works-stackgrid-with-title.html
+++ b/works-stackgrid-with-title.html
@@ -150,7 +150,7 @@
 			<div class="item">
 				<a href="Escape_UW_Book.html" class="permalink">
 					<div class="remove-line-height">
-						<img src="images/Escape_Book.jpg" alt="" />
+						<img src="images/Escape_book.jpg" alt="" />
 					</div><!-- // .remove-line-height -->
 					
 					<div class="box-desc">
