--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
 	<section id="footer">
 		<div class="container">
 			<div class="desktop-3 columns">
-				<p>Copyright &copy; <a href="http://www.typebig.com" class="italic">Typebig</a></p>
+			  <p>Copyright &copy; CL</p>
 			</div><!-- // .desktop-3 -->
 
 			<div class="desktop-9 columns">
 				<ul id="social">
-					<li><a href="http://www.facebook.com" class="hoverMe">Facebook</a></li>
-					<li><a href="http://www.twitter.com" class="hoverMe">Twitter</a></li>
-					<li><a href="http://www.google.com" class="hoverMe">Google+</a></li>
+					<li><a href="https://www.facebook.com/chris.leatham" class="hoverMe">Facebook</a></li>
+					<li><a href="https://www.linkedin.com/in/chrisleatham13" class="hoverMe">LinkedIn</a></li>
+					<li><a href="mailto:Chrisleatham13@gmail.com" class="hoverMe">Email</a></li>
 				</ul><!-- // #social -->
 			</div><!-- // .desktop-9 -->
 
