fixed mobile menu

--- a/art.html
+++ b/art.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Chris L.m</title>
+	<title>Chris L.</title>
 	<meta name="description" content=".">
 	<meta name="author" content="">
 	
@@ -88,11 +88,7 @@
 						</a>
 					</li>
 
-					<li>
-					  <ul>
-					    <li><a href="single-blog.html">Single Page</a></li>
-						</ul>
-					</li>
+					
 					
 				</ul><!-- // #nav -->
 
