--- a/commission.html
+++ b/commission.html
@@ -88,11 +88,7 @@
 						</a>
 					</li>
 
-					<li>
-					  <ul>
-					    <li><a href="single-blog.html">Single Page</a></li>
-						</ul>
-					</li>
+					
 					
 				</ul><!-- // #nav -->
 
@@ -114,6 +110,7 @@
 				<div class="clear"></div>
 			</div><!-- // .container -->
 		</div><!-- // .logo-wrap -->
+	</section><!-- // #header -->
 	</section><!-- // #header -->
 
 	<!-- Work - Single Page (Left Sidebar)
