updated text about me

--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
@@ -111,7 +112,6 @@
 			</div><!-- // .container -->
 		</div><!-- // .logo-wrap -->
 	</section><!-- // #header -->
-
 	<!-- About
 	================================================== -->
 	<section id="about" class="page">
@@ -142,8 +142,8 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-						  <h4>School</h4>
-						  <p>I grew up in Kent, Washington going to Kentwood High School. Starting my junior year of high school, I started attending Green River Community College to earn some college credit while challenging myself by attending classes. I began to focus my studies on design and psychology. After I graduated high school, I began studying at the University of Washington, majoring in Informatics with a focus on Human Computer Interaction. I will be graduating in the June of 2017. </p>
+						  <h4>Education</h4>
+						  <p>I grew up in Kent, Washington attending Kentwood High School. As a juniro, I enrolled at Green River Community College as part of Running Start to earn some college credit while completing my high school education. While there, I began to focus my studies on design and psychology. After I graduated high school, I enrolled at the University of Washington, majoring in Informatics with a focus on Human Computer Interaction. I will be graduating in the June of 2017. </p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
@@ -158,8 +158,8 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 tablet-6 columns">
-						  <h4>Work</h4>
-						  <p>I started teaching myself graphic design tools and practices since I was in 7th grade. I began designing website designs and application designs when I was in 12th grade. Since then, I have created websites for clients, designed applications for clients, and created many posters, videos, brochures, and more. I have been employed by many companies (such as the University of Washington, Fred Hutch, and T-Mobile) to create designs and experiences for customers.</p>
+						  <h4>Professional</h4>
+						  <p>I've always had an interest in graphic design and at an early age started learning to use graphic design tools and practices, designing websites and applications. As an intern and a student, I have created websites, designed applications, created posters, videos, brochures, and other graphic projects for clients. I have been employed by companies (such as the University of Washington, Fred Hutchinson Cancer Research Center, and T-Mobile) to create designs and experiences for customers.</p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
@@ -174,8 +174,8 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-6 pull-3 tablet-6 tablet-pull-0 columns">
-							<h4>Personal Facts</h4>
-							<p>I am really into movies, tv shows, and comic books. I often spend my time drawing on my computer and practicing my skills in photoshop and staying up to date on design software. I have been passionate about technology and art since I was a little kid and want will continue to pursue my passion.  </p>
+							<h4>Personal</h4>
+							<p>In keeping with my passion for graphics, I enjoy movies, tv shows, and graphic novels. I often spend my free time illustrating on my computer, allowing me to practice my skills with design software such as Photoshop, Illustrator, and Sketch.I have always been passionate about art and technology and am seeking a career that suites my interests and lets me continue to pursue my passion.  </p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
