fixed resume section

--- a/single-blog.html
+++ b/single-blog.html
@@ -197,7 +197,7 @@
 				<div class="desktop-9 tablet-12 columns">
 					<div class="box-content">
 						<!-- // PERMALINK -->
-						<p>At T-Mobile, I am a Technology Product Development Intern. I work primarily on the T-Mobile app providing User Experience and User Interface solutions to problems and manage solutions from concept to implementation. I worked on a team of 15 in an agile environment to provide updates to the application.</p>
+						<p>At T-Mobile, I am a Technology Product Development Intern. I work primarily on the T-Mobile app providing User Experience and User Interface solutions to problems and manage solutions from concept to implementation. As part of a team of 15, I worked in an agile environment to provide updates to the application.</p>
 						<p>&nbsp;</p>
 						<div class="desktop-12 columns">
 						</div>
@@ -223,7 +223,7 @@
 				<div class="desktop-9 tablet-12 columns">
 					<div class="box-content">
 						<!-- // PERMALINK -->
-						<p>At Fred Hutch I was a UX and Graphic Designer. I would provide graphic designs and print designs for the development team and the marketing team. I would also create HTML email templates that would be sent out to members of Fred Hutch and different contributors for various events and newsletters. Fred Hutch was going through an internal website migration and I helped provide solutions on design and structure. Much of my work was done in Adobe Illustrator, Photoshop, and InDesign.</p>
+						<p>At Fred Hutch I was a UX and Graphic Designer. I would provide graphic designs and print designs for the development team and the marketing team. I would also create HTML email templates that would be sent out to members of Fred Hutch and different contributors for various events and newsletters. Fred Hutch was going through an internal website migration and I provided solutions on design and structure. Much of my work was done in Adobe Illustrator, Photoshop, and InDesign.</p>
 						<p>&nbsp;</p>
 						<div class="desktop-12 columns">
 						</div>
@@ -249,7 +249,7 @@
 				<div class="desktop-9 tablet-12 columns">
 					<div class="box-content">
 						<!-- // PERMALINK -->
-						<p>At the University of Washington iSchool, I was a Teaching Assistant for the Visual Information Design class. I assisted to the professor of the class and provided office hours and consulting to students in the class. The class was structured to teach students how to create an infographic utilizing information potential. </p>
+						<p>At the University of Washington iSchool, I was a Teaching Assistant for the Visual Information Design class. I assisted the professor of the class and provided office hours and consulting to students in the class. The class was structured to teach students how to create an infographic utilizing information potential. </p>
 						<p>&nbsp;</p>
 						<div class="desktop-12 columns">
 						</div>
