--- a/art.html
+++ b/art.html
@@ -126,7 +126,7 @@
 						<div class="box-info">
 						  <h3 class="border-top">Art & Interest Guide</h3>
 						  <p class="project-desc">2016</p>
-						  <p>The Art &amp; Interest Guide is a guide to the art at the Fred Hutchinson Cancer Research Center. The brochure is currently available at the Fred Hutch campus.</p>
+							<p>The Art &amp; Interest Guide is a guide to the art at the Fred Hutchinson Cancer Research Center. The brochure is currently available at the Fred Hutch campus. Full guide can be viewed <a href="https://drive.google.com/open?id=0B10itP9QwSbTMzhrR0tRUGhEaUE"><strong>HERE</strong></p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
