--- a/commission.html
+++ b/commission.html
@@ -125,7 +125,7 @@
 					<div class="desktop-3 tablet-12 columns">
 					
 						<div class="box-info">
-						  <h3 class="border-top">Comission</h3>
+						  <h3 class="border-top">Commission</h3>
 						  <p class="project-desc">2014</p>
 						  <p>This commission project was done for a friend who requested an octopus to be drawn on his head. </p>
 						</div><!-- // .box-info -->
